Simp_Chinese update

--- a/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_simp_chinese:
- autonomy_associated_state: "受保护国"
+ autonomy_associated_state: "联系国"
  autonomy_satellite_state: "卫星国"
  autonomy_puppet_state: "傀儡国"
  autonomy_autonomous_state: "自治区"
@@ -33,3 +33,4 @@
  autonomy_balkan_federation: "巴尔干联邦主体"
  autonomy_autonomous_province: "塞尔维亚自治省"
  autonomy_autonomous_province1: "联邦主体"
+ autonomy_republic_ukr: "联邦主体"
