--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -640,7 +640,7 @@
  IRQ.liberalism_2017: "£IRQ_liberalism_2017_small 伊拉克民族运动"
  IRQ.liberalism_2017_icon: "£IRQ_liberalism_2017_small"
  IRQ.liberalism_2017_desc: "自由主义 - 伊拉克民族运动是一个建立在世俗主义和非宗派主义基础上的联盟，其中混合了一些伊拉克民族主义。它由一些伊拉克最大的世俗政党组成，其中包括全国联盟。"
- IRQ.Conservative: "£IRQ_Conservative_small 伊斯兰达瓦党 - 伊拉克组织"
+ IRQ.Conservative: "£IRQ_Conservative_small 伊斯兰达瓦党"
  IRQ.Conservative_icon: "£IRQ_Conservative_small"
  IRQ.Conservative_desc: "反动主义 - 伊斯兰达瓦党是一个什叶派宗教政党，从已故伊拉克神职人员穆克塔达·萨德尔那里汲取灵感。然而，它逐渐受到伊朗的影响，并参与了几次针对萨达姆·侯赛因的暗杀计划。它与ISCI的主要对比点是，它认为政治权力应该由广大人民群众掌握，而不仅仅是集中在伊斯兰学者手中。"
  IRQ.Vilayat_e_Faqih: "£IRQ_Vilayat_e_Faqih_small 巴德尔组织"
@@ -657,18 +657,18 @@
  IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small 伊拉克共产党"
  IRQ.Neutral_Communism_icon: "£IRQ_Neutral_Communism_small"
  IRQ.Neutral_Communism_desc: "共产主义 - 伊拉克共产党长期以来一直主导着伊拉克的左派政治。在苏联的斡旋下，它与复兴党的不稳定联盟于1979年瓦解，此后它一直主张武装斗争。它是世俗派以及社会主义政党。"
- IRQ.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 伊拉克伊斯兰党"
+ IRQ.Neutral_Muslim_Brotherhood: "£IRQ_islamic_party 伊拉克伊斯兰党"
  IRQ.Neutral_Muslim_Brotherhood_desc: "温和伊斯兰主义 - 伊拉克伊斯兰党是穆斯林兄弟会在伊拉克的官方分支，是伊拉克逊尼派少数民族的主要载体之一。"
  IRQ.Neutral_Muslim_Brotherhood_2017: "£IRQ_Neutral_Muslim_Brotherhood_small 改革派联盟"
  IRQ.Neutral_Muslim_Brotherhood_2017_icon: "£IRQ_Neutral_Muslim_Brotherhood_small"
  IRQ.Neutral_Muslim_Brotherhood_2017_desc: "温和伊斯兰主义 - 改革派联盟是伊拉克主要的逊尼派政治联盟，以泛伊斯兰主义的穆斯林兄弟会的意识形态为主导。它主张加强伊拉克逊尼派地区的自治权。"
- IRQ.Nat_Autocracy: "£generic_Nat_Autocracy_small 伊拉克武装力量"
+ IRQ.Nat_Autocracy: "£IRQ_armed_forces 伊拉克武装部队"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
- IRQ.Nat_Autocracy_desc: ""
- IRQ.Nat_Populism: "£IRQ_Nat_Autocracy_small 阿拉伯复兴社会党"
+ IRQ.Nat_Autocracy_desc: "军政府 - 伊拉克武装部队成立于1930年代初，参与了各种政治活动，包括推翻哈希姆王朝的政变."
+ IRQ.Nat_Populism: "£IRQ_Nat_Autocracy_small 阿拉伯复兴社会党 - 伊拉克地区"
  IRQ.Nat_Populism_desc: "复兴党 - 伊拉克阿拉伯社会复兴党于1968年通过军事政变上台。该党原与泛阿拉伯主义的叙利亚复兴党同属一个政党，伊拉克支部以伊拉克民族主义为核心意识形态，分裂演变为“伊拉克复兴党”。叙利亚支持伊朗对抗伊拉克的血海深仇。在萨达姆·侯赛因的领导下，它推动了基于专制主义和日益伊斯兰化的先前世俗国家的军国主义“大美索不达米亚”的复兴。"
- IRQ.Monarchist: "£generic_Monarchist_small 哈希姆王室"
- IRQ.Monarchist_desc: ""
+ IRQ.Monarchist: "£IRQ_monarch 哈希姆王室"
+ IRQ.Monarchist_desc: "君主主义 - 伊拉克哈希姆王朝从1921年到1958年统治伊拉克，后被军队推翻。目前，家族首领的头衔由拉阿德·本·扎伊德担任。"
  KOR.Western_Autocracy: "£generic_Western_Autocracy_small 民主共和党"
  KOR.Western_Autocracy_desc: "亲西方专制主义 - 民主共和党是朴正熙独裁统治的政治工具，这是韩国历史上残酷的威权主义与显著的经济成就相结合的一段时期。如今，党统治的遗产仍然存在分歧。"
  KOR.conservatism: "£kor_western_conservative 大国家党"
@@ -1294,10 +1294,10 @@
  SAU.Neutral_green: "£SAU_green 沙特阿拉伯绿党"
  SAU.Neutral_green_icon: "£SAU_green"
  SAU.Neutral_green_desc: ""
- SAU.Nat_Fascism: "£IRQ_Nat_Autocracy_small 复兴党"
+ SAU.Nat_Fascism: "£IRQ_Nat_Autocracy_small 阿拉伯复兴社会党"
  SAU.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
  SAU.Nat_Fascism_desc: ""
- SAU.Nat_Autocracy: "£generic_Nat_Autocracy_small 阿拉伯武装力量"
+ SAU.Nat_Autocracy: "£generic_Nat_Autocracy_small 沙特阿拉伯武装力量"
  SAU.Nat_Autocracy_desc: ""
  TUR.Western_Autocracy: "£TUR_Western_Autocracy 居伦运动"
  TUR.Western_Autocracy_icon: "£TUR_Western_Autocracy"
@@ -1341,7 +1341,7 @@
  TUR.Neutral_Autocracy_reform: "£TUR_Western_Autocracy 居伦运动"
  TUR.Neutral_Autocracy_reform_icon: "£TUR_Western_Autocracy"
  TUR.Neutral_Autocracy_reform_desc: "居伦运动，是由法图拉·居伦领导的一个跨国伊斯兰社交圈。该组织的目标是倡导不同信仰间的对话，提高全世界穆斯林的地位，目标是成为世界领先的穆斯林网络。一些人担心，他们的目标与穆斯林兄弟会并没有什么不同，他们的主要目标是伊斯兰教的统治地位。\n\n该党于军方的§Y地位§!：§R-100§!"
- TUR.Neutral_conservatism: "£generic_Neutral_conservatism_small True Path Party"
+ TUR.Neutral_conservatism: "£generic_Neutral_conservatism_small 民族党"
  TUR.Neutral_conservatism_icon: "£generic_Neutral_conservatism_small"
  TUR.Neutral_conservatism_desc: "MP - 国民党是一个保守的民族主义政党。\n\n该党于军方的§Y地位§!：§R-50§!"
  TUR.oligarchism: "£TUR_oligarchism 正确道路党"
@@ -1857,7 +1857,7 @@
  ABK.Neutral_conservatism: "£ABK_Neutral_conservative 统一阿布哈兹"
  ABK.Neutral_conservatism_icon: "£ABK_Neutral_conservative"
  ABK.Neutral_conservatism_desc: ""
- ABK.socialism: "£ABK_western_social_democrat 争取阿布哈兹民族团结论坛"
+ ABK.socialism: "£ABK_western_social_democrat 团结"
  ABK.socialism_icon: "£ABK_western_social_democrat"
  ABK.socialism_desc: ""
  ABK.Communist-State: "£generic_Communist_State_small 阿布哈兹共产党"
@@ -1865,7 +1865,7 @@
  ABK.Conservative: "£ABK_emerging_reactionary 阿姆斯萨哈拉"
  ABK.Conservative_icon: "£ABK_emerging_reactionary"
  ABK.Conservative_desc: ""
- ABK.Autocracy: "£generic_Autocracy_small 争取阿布哈兹民族团结论坛 "
+ ABK.Autocracy: "£generic_Autocracy_small 阿布哈兹民族团结论坛"
  ABK.Autocracy_desc: ""
  ABK.Monarchist: "£ABK_nationalist_monarchist 舍尔瓦什泽王室"
  ABK.Monarchist_icon: "£ABK_nationalist_monarchist"
@@ -3002,10 +3002,10 @@
  GAH.Monarchist_desc: "君主派 - 阿博欣王朝的奥约科家族是阿散蒂王国的统治家族，该家族在1670年至1896年统治加纳地区，当时该地区处于英国统治之下。它于1935年在奥赛·图图· 阿杰曼· 普伦佩二世的领导下获得自治，直到1957年获得完全独立。同年，阿散蒂王国与加纳建立了邦联。现任国王为奥图姆福·纳纳·奥赛·图图二世。"
  GAM.Nat_Populism: "£generic_Nat_Populism_small 爱国主义调整与建设同盟"
  GAM.Nat_Populism_desc: ""
- GEO.conservatism: "£GEO_western_conservative 自由民主主义者"
+ GEO.conservatism: "£GEO_western_conservative 自由民主党"
  GEO.conservatism_icon: "£GEO_western_conservative"
  GEO.conservatism_desc: ""
- GEO.liberalism: "£GEO_western_liberal 格鲁吉亚梦想"
+ GEO.liberalism: "£GEO_western_liberal 格鲁吉亚梦想 - 民主格鲁吉亚"
  GEO.liberalism_icon: "£GEO_western_liberal"
  GEO.liberalism_desc: ""
  GEO.socialism: "£GEO_western_social_democrat 格鲁吉亚工党"
@@ -3014,7 +3014,7 @@
  GEO.Western_Autocracy: "£GEO_western_autocrat 联合民族运动"
  GEO.Western_Autocracy_icon: "£GEO_western_autocrat"
  GEO.Western_Autocracy_desc: ""
- GEO.Communist-State: "£GEO_emerging_communism 统一共产党 - §G新兴主义§!"
+ GEO.Communist-State: "£GEO_emerging_communism 统一共产党 - §G新兴主义派§!"
  GEO.Communist-State_desc: ""
  GEO.Communist-State_icon: "£GEO_emerging_communism"
  GEO.Conservative: "£GEO_emerging_reactionary 民主运动 - 联合格鲁吉亚"
@@ -3035,13 +3035,13 @@
  GEO.Neutral_Libertarian: "£GEO_non_aligned_libertarian 吉尔基"
  GEO.Neutral_Libertarian_icon: "£GEO_non_aligned_libertarian"
  GEO.Neutral_Libertarian_desc: ""
- GEO.Neutral_Communism: "£GEO_non_aligned_communism 统一共产党 - §Y不结盟主义§!"
+ GEO.Neutral_Communism: "£GEO_non_aligned_communism 统一共产党 - §Y不结盟主义派§!"
  GEO.Neutral_Communism_icon: "£GEO_non_aligned_communism"
  GEO.Neutral_Communism_desc: ""
- GEO.Neutral_green: "£GEO_non_aligned_greens 绿党"
+ GEO.Neutral_green: "£GEO_non_aligned_greens 格鲁吉亚绿党"
  GEO.Neutral_green_icon: "£GEO_non_aligned_greens"
  GEO.Neutral_green_desc: ""
- GEO.Monarchist: "£GEO_nationalist_monarchist 巴格拉季昂王室"
+ GEO.Monarchist: "£GEO_nationalist_monarchist 巴格拉季昂"
  GEO.Monarchist_icon: "£GEO_nationalist_monarchist"
  GEO.Monarchist_desc: ""
  GEO.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small 第比利斯伊玛目"
@@ -3522,23 +3522,23 @@
  KAZ.socialism: "£KAZ_western_social_democrat 阿吾勒人民民主爱国党"
  KAZ.socialism_icon: "£KAZ_western_social_democrat"
  KAZ.socialism_desc: "阿吾勒人民民主爱国党或简称为阿吾勒（“村庄”），是哈萨克斯坦的一个政党。它最初由加尼·卡利耶夫于2000年1月30日创立，当时名为“阿吾勒”。阿吾勒宣称其主要价值观是灵性、爱国主义、忠诚、平等、合作。党以社会民主主义原则为基础，以加强国家调控和支持农业经济、保护农民工利益、积极推动实施经济和政治改革为首要任务，以维护农村人口的利益为己任。社会进一步民主化，在经济各部门实行合理形式的市场关系，提高公民的生活水平，以及对人民进行爱国主义教育。"
- KAZ.Communist-State: "£generic_Communist_State_small 哈萨克斯坦共产党"
+ KAZ.Communist-State: "£generic_Communist_State_small 共产党"
  KAZ.Communist-State_desc: "哈萨克斯坦共产党于1936年成立，当时哈萨克斯坦在苏联境内获得加盟共和国地位。哈萨克斯坦共产党一直是苏联共产党的一个分支，直到苏联解体。"
  KAZ.Autocracy: "£KAZ_Autocracy 祖国"
  KAZ.Autocracy_icon: "£KAZ_Autocracy"
  KAZ.Autocracy_desc: "祖国之光是哈萨克斯坦的一个政党。 它是迄今为止最大的政党，自1999年起一直是该国的执政党。最初于1999年2月12日由前总理谢尔盖·捷列先科成立，当时简称为“祖国”，合并了包括人民联盟在内的几个先前独立的亲总统政党哈萨克斯坦统一运动、哈萨克斯坦自由运动和“为了哈萨克斯坦——2030”运动。"
- KAZ.anarchist_communism: "£KAZ_anarchist_communism 哈萨克斯坦社会主义运动"
+ KAZ.anarchist_communism: "£KAZ_anarchist_communism 社会主义运动"
  KAZ.anarchist_communism_icon: "£KAZ_anarchist_communism"
  KAZ.anarchist_communism_desc: "哈萨克斯坦社会主义抵抗运动由艾努尔·库尔曼诺夫在阿拉木图创立。该组织最初是工人国际托洛茨基主义委员会的哈萨克斯坦分部，后来脱离了托洛茨基主义，现在参加了马克思列宁主义共产党和工人党国际会议。"
- KAZ.neutral_Social: "£generic_neutral_Social_small 哈萨克斯坦公民党"
+ KAZ.neutral_Social: "£generic_neutral_Social_small 公民党"
  KAZ.neutral_Social_desc: "哈萨克斯坦公民党是哈萨克斯坦一个已解散的政党，由第一书记阿扎特·佩鲁阿舍夫领导。公民党成立于1998年。公民党主张建设民主法治、组建公民社会机构、加强和发展国家地位。公民党的大部分成员由采矿和冶金行业最大企业的工人和雇员组成。党的主要机关是中央委员会。"
  KAZ.Neutral_Libertarian: "£KAZ_non_aligned_libertarian 哈萨克斯坦海盗党"
  KAZ.Neutral_Libertarian_icon: "£KAZ_non_aligned_libertarian"
  KAZ.Neutral_Libertarian_desc: "哈萨克斯坦海盗党是哈萨克斯坦未注册的政党。它效仿瑞典海盗党的模式，支持知识产权改革、言论自由和隐私。它是国际海盗党的创始成员之一。"
- KAZ.Neutral_green: "£KAZ_non_aligned_greens 哈萨克斯坦农民党"
+ KAZ.Neutral_green: "£KAZ_non_aligned_greens 农民党"
  KAZ.Neutral_green_icon: "£KAZ_non_aligned_greens"
  KAZ.Neutral_green_desc: "哈萨克斯坦农业党成立于1999年1月6日。该党的宗旨是保护农村居民和农业工人的社会、文化、公民、政治和经济权利，促进国家地位的加强。该党主要由农业工人和农民、私人农场、农村公司和协会组成。"
- KAZ.Nat_Autocracy: "£KAZ_nationalist_military_junta 哈萨克斯坦共和国武装力量"
+ KAZ.Nat_Autocracy: "£KAZ_nationalist_military_junta 共和国武装力量"
  KAZ.Nat_Autocracy_icon: "£KAZ_nationalist_military_junta"
  KAZ.Nat_Autocracy_desc: "哈萨克斯坦共和国武装部队是哈萨克斯坦的统一武装部队。它们保证维护国家的独立和主权及其陆地、领水和领空的完整及其宪法秩序。哈萨克斯坦武装部队在哈萨克斯坦国防部的领导下行动。"
  KEN.conservatism: "£generic_conservatism_small 民主党 "
@@ -3619,7 +3619,7 @@
  KYR.Communist-State: "£KYR_emerging_communism 吉尔吉斯斯坦共产党"
  KYR.Communist-State_icon: "£KYR_emerging_communism"
  KYR.Communist-State_desc: "吉尔吉斯斯坦共产党是吉尔吉斯斯坦共产党，成立于1992年6月22日，出版日报《吉尔吉斯斯坦真理报》。该党认为自己是苏联时期统治吉尔吉斯斯坦的吉尔吉斯斯坦共产党的继承者。"
- KYR.Conservative: "£KYR_emerging_reactionary 吉尔吉斯斯坦社会民主党"
+ KYR.Conservative: "£KYR_emerging_reactionary 社会民主党"
  KYR.Conservative_icon: "£KYR_emerging_reactionary"
  KYR.Conservative_desc: "吉尔吉斯斯坦社会民主党是吉尔吉斯斯坦的一个政党。成员于1993年10月1日组建该党，但直到1994年12月16日才在司法部登记。阿布迪加尼·埃尔克巴耶夫担任该党第一任主席。阿尔马兹别克·阿坦巴耶夫于1999年7月30日接替了他。该党的大多数成员来自该国的企业家。"
  KYR.anarchist_communism: "£KYR_anarchist_communism 统一"
@@ -4784,16 +4784,16 @@
  SYR.Nat_Autocracy_desc: ""
  SUR.oligarchism: "£generic_oligarchism_small 首都第一司令部"
  SUR.oligarchism_desc: ""
- TAJ.conservatism: "£TAJ_western_conservative 民主党"
+ TAJ.conservatism: "£TAJ_western_conservative 塔吉克斯坦人民民主党"
  TAJ.conservatism_icon: "£TAJ_western_conservative"
  TAJ.conservatism_desc: ""
- TAJ.socialism: "£TAJ_western_social_democrat 社会民主党"
+ TAJ.socialism: "£TAJ_western_social_democrat 塔吉克斯坦社会民主党"
  TAJ.socialism_icon: "TAJ_western_social_democrat"
  TAJ.socialism_desc: ""
  TAJ.Communist-State: "£TAJ_emerging_communism 塔吉克斯坦共产党"
  TAJ.Communist-State_icon: "£TAJ_emerging_communism"
  TAJ.Communist-State_desc: ""
- TAJ.Conservative: "£TAJ_emerging_reactionary 塔吉克斯坦人民民主党"
+ TAJ.Conservative: "£TAJ_emerging_reactionary 塔吉克斯坦民主党"
  TAJ.Conservative_icon: "£TAJ_emerging_reactionary"
  TAJ.Conservative_desc: ""
  TAJ.anarchist_communism: "£TAJ_anarchist_communism 塔吉克斯坦社会党"
@@ -4807,13 +4807,13 @@
  TAJ.Kingdom_desc: ""
  TAJ.oligarchism: "£generic_oligarchism_small 公正党"
  TAJ.oligarchism_desc: ""
- TAJ.neutral_Social: "£TAJ_non_aligned_socialist_democrat 农民党"
+ TAJ.neutral_Social: "£TAJ_non_aligned_socialist_democrat 塔吉克斯坦农民党"
  TAJ.neutral_Social_icon: "£TAJ_non_aligned_socialist_democrat"
  TAJ.neutral_Social_desc: ""
  TAJ.Neutral_Muslim_Brotherhood: "£TAJ_non_aligned_moderate_islamist 巴达克山红宝石"
  TAJ.Neutral_Muslim_Brotherhood_icon: "TAJ_non_aligned_moderate_islamist"
  TAJ.Neutral_Muslim_Brotherhood_desc: ""
- TAJ.Nat_Autocracy: "£generic_Nat_Autocracy_small 塔吉克国军"
+ TAJ.Nat_Autocracy: "£generic_Nat_Autocracy_small 塔吉克斯坦武装力量"
  TAJ.Nat_Autocracy_desc: ""
  TIB.Monarchist: "£generic_Monarchist_small 达赖喇嘛"
  TIB.Monarchist_desc: ""
@@ -4880,32 +4880,32 @@
  TRI.neutral_Social_desc: ""
  TRI.Nat_Autocracy: "£generic_Nat_Autocracy_small 特立尼达和多巴哥国防军"
  TRI.Nat_Autocracy_desc: ""
- TRK.liberalism: "£TRK_western_liberal 土库曼斯坦共和党"
+ TRK.liberalism: "£TRK_western_liberal 共和党"
  TRK.liberalism_icon: "£TRK_western_liberal"
  TRK.liberalism_desc: ""
- TRK.socialism: "£TRK_western_social_democrat 土库曼斯坦妇女联合会"
+ TRK.socialism: "£TRK_western_social_democrat 妇女联合会"
  TRK.socialism_icon: "£TRK_western_social_democrat"
  TRK.socialism_desc: ""
  TRK.Western_Autocracy: "£generic_Western_Autocracy_small 土库曼民主力量联盟"
  TRK.Western_Autocracy_desc: ""
- TRK.Communist-State: "£generic_Communist_State_small 土库曼斯坦共产党"
+ TRK.Communist-State: "£generic_Communist_State_small 共产党"
  TRK.Communist-State_desc: ""
  TRK.Conservative: "£TRK_emerging_reactionary 马格特姆古利青年组织"
  TRK.Conservative_icon: "£TRK_emerging_reactionary"
  TRK.Conservative_desc: ""
- TRK.anarchist_communism: "£TRK_anarchist_communism 土库曼斯坦工会组织"
+ TRK.anarchist_communism: "£TRK_anarchist_communism 工会组织"
  TRK.anarchist_communism_icon: "£TRK_anarchist_communism"
  TRK.anarchist_communism_desc: ""
  TRK.Neutral_conservatism: "£TRK_non_aligned_conservative 实业家和企业家党"
  TRK.Neutral_conservatism_icon: "£TRK_non_aligned_conservative"
  TRK.Neutral_conservatism_desc: ""
- TRK.neutral_Social: "£TRK_non_aligned_socialist_democrat 土库曼斯坦农民党"
+ TRK.neutral_Social: "£TRK_non_aligned_socialist_democrat 农民党"
  TRK.neutral_Social_icon: "£TRK_non_aligned_socialist_democrat"
  TRK.neutral_Social_desc: ""
- TRK.Neutral_Autocracy: "£TRK_non_aligned_autocracy 土库曼斯坦民主党"
+ TRK.Neutral_Autocracy: "£TRK_non_aligned_autocracy 民主党"
  TRK.Neutral_Autocracy_icon: "£TRK_non_aligned_autocracy"
  TRK.Neutral_Autocracy_desc: ""
- TRK.Nat_Autocracy: "£TRK_nationalist_military_junta 土库曼斯坦陆军"
+ TRK.Nat_Autocracy: "£TRK_nationalist_military_junta 土库曼斯坦武装力量"
  TRK.Nat_Autocracy_icon: "£TRK_nationalist_military_junta"
  TRK.Nat_Autocracy_desc: ""
  TUN.liberalism: "£generic_liberalism_small 社会自由党"
@@ -4979,19 +4979,19 @@
  UZB.Western_Autocracy: "£UZB_western_autocracy 团结-人民民主党"
  UZB.Western_Autocracy_icon: "£UZB_western_autocracy"
  UZB.Western_Autocracy_desc: "团结党，正式名称为团结人民民主党，是一个总部位于乌兹别克斯坦的政治组织。它通过民粹主义言论促进经济自由主义和非暴力抵抗。"
- UZB.Neutral_conservatism: "£UZB_non_aligned_conservative 乌兹别克斯坦民族复兴民主党"
+ UZB.Neutral_conservatism: "£UZB_non_aligned_conservative 民族复兴民主党"
  UZB.Neutral_conservatism_icon: "£UZB_non_aligned_conservative"
  UZB.Neutral_conservatism_desc: "乌兹别克斯坦“民族复兴”民主党，简称米莉·提克拉尼什，是乌兹别克斯坦的一个民族保守政党。它与该国执政党乌兹别克斯坦自由民主党结盟。该党成立于1995年，成员主要是知识分子，女性成员比例也较高。该党倡导强烈的乌兹别克文化意识，渴望文化复兴，同时也寻求与中亚其他国家建立更密切的联系。 党反对俄罗斯在该地区的影响力，并以此为基础攻击欧亚经济共同体的基础。"
- UZB.oligarchism: "£UZB_non_aligned_oligarchism 公正党"
+ UZB.oligarchism: "£UZB_non_aligned_oligarchism 公正社会民主党"
  UZB.oligarchism_icon: "£UZB_non_aligned_oligarchism"
  UZB.oligarchism_desc: "正义，正式名称为“正义”社会民主党，是乌兹别克斯坦的一个政党。该党的创始人之一和第一任总书记是安瓦尔·尤拉博耶夫。它是该国执政党乌兹别克斯坦自由民主党的四个亲政府反对党之一。"
  UZB.Neutral_Autocracy: "£UZB_non_aligned_autocracy 乌兹别克斯坦人民民主党"
  UZB.Neutral_Autocracy_icon: "£UZB_non_aligned_autocracy"
  UZB.Neutral_Autocracy_desc: "乌兹别克斯坦人民民主党是乌兹别克斯坦的一个政党。它成立于1991年，是乌兹别克斯坦共产党的合法继承者。在其创始人伊斯兰·卡里莫夫的领导下，乌兹别克苏维埃社会主义共和国解体，乌兹别克斯坦共和国成立。1996年卡里莫夫退党并组建乌兹别克斯坦自由民主党后，失去了执政党地位。该党认同社会民主主义和中左翼政治，是乌兹别克斯坦立法院的主要左倾政党。在其章程中，它提倡平等主义和福利国家内受监管的社会市场经济，同时支持外交政策中的不干预主义。其核心支持者是依赖社会福利的人群、养老金领取者、残疾人和雇员；尽管如此，它还是作为亲政府反对派的四个政党之一，自自民党成立以来一直如此。"
- UZB.Neutral_green: "£UZB_non_aligned_greens 乌兹别克斯坦生态运动(2017)"
+ UZB.Neutral_green: "£UZB_non_aligned_greens 生态党"
  UZB.Neutral_green_icon: "£UZB_non_aligned_greens"
  UZB.Neutral_green_desc: "乌兹别克斯坦生态党是乌兹别克斯坦的一个政党和环保运动。"
- UZB.Nat_Autocracy: "£generic_Nat_Autocracy_small 乌兹别克地面部队"
+ UZB.Nat_Autocracy: "£generic_Nat_Autocracy_small 陆军"
  UZB.Nat_Autocracy_desc: "乌兹别克斯坦陆军是乌兹别克斯坦共和国武装部队的陆地组成部分。这支军队自1991年苏联解体以来一直在运作，由驻扎在乌兹别克斯坦境内的前苏联陆军部队组成。"
  UZB.Nat_Populism: "£UZB_nationalist_right_wing_populist 自由民主党"
  UZB.Nat_Populism_icon: "£UZB_nationalist_right_wing_populist"
@@ -5463,10 +5463,10 @@
  AZE.Neutral_Autocracy: "£AZE_non_aligned_autocracy 新阿塞拜疆党"
  AZE.Neutral_Autocracy_icon: "£AZE_non_aligned_autocracy"
  AZE.Neutral_Autocracy_desc: ""
- IRQ.socialism: "£IRQ_western_social_small 伊斯兰达瓦党 - 伊拉克组织"
- IRQ.socialism_icon: "£IRQ_western_social_small"
- IRQ.socialism_desc: "社会主义 - 在萨达姆·侯赛因的独裁统治期间，达瓦党遭受了残酷的迫害和灭绝运动，迫使其大多数幸存领导人逃往邻国和欧洲，在那里他们继续领导留在国内的积极分子通过有组织的起义与政权作斗争。但随着时间的推移，部分留在国内的党员与流亡领导人之间出现了分歧和对抗，导致该党分裂，伊拉克境内部分地下组织成立了哈希姆·阿尔-莫萨维领导的伊斯兰达瓦党-伊拉克组织。该党领袖，在伊拉克什叶派中享有盛誉并受人尊敬。"
- IRQ.conservatism: "£IRQ_conservatism_small 伊斯兰达瓦党 - 伊拉克组织"
+ IRQ.socialism: "£IRQ_national_congress 伊拉克国民大会"
+ IRQ.socialism_icon: "£IRQ_national_congress"
+ IRQ.socialism_desc: "福利国家 - 伊拉克国民大会是海湾战争后成立的一个伞式组织，旨在抵抗伊拉克复兴党的命令。该组织由美国资助，由什叶派、前军官、自由党、社会主义者和许多其他政治和种族群体组成。"
+ IRQ.conservatism: "£IRQ_conservatism_small"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
  IRQ.conservatism_desc: "保守主义 - 在萨达姆·侯赛因的独裁统治期间，达瓦党遭受了残酷的迫害和灭绝运动，迫使其大多数幸存领导人逃往邻国和欧洲，在那里他们继续领导留在国内的积极分子与政权作斗争。 有组织的起义。 但随着时间的推移，部分留在国内的党员与流亡领导人之间出现了分歧和对抗，导致该党分裂，伊拉克境内部分地下组织成立了哈希姆·阿尔 -莫萨维领导的伊斯兰达瓦党-伊拉克组织。该党领袖，在伊拉克什叶派中享有盛誉并受人尊敬。"
  IRQ.Conservative_2018: "£IRQ_Conversative_2017_small 文明联盟"
@@ -5486,7 +5486,7 @@
  TUR.oligarchism_mafia_desc: "土耳其黑帮 - 土耳其黑帮长期以来一直参与土耳其政治和日常生活。众所周知，他们在土耳其领土内外从事犯罪活动。通常，他们的外部业务在西欧进行，但众所周知，他们也在其他地方开展业务。\n\n该党于军方的§Y地位§!：§R-25§!"
  ROJ.conservatism_icon: "£ROJ_conservatism_small"
  ROJ.neutral_Social_icon: "£ROJ_neutral_Social_small"
- IRQ.Neutral_conservatism: "£generic_Neutral_conservatism_small 伊拉克萨德尔派公正党"
+ IRQ.Neutral_conservatism: "£IRQ_sardist 萨德尔运动"
  IRQ.Neutral_conservatism_desc: "伊拉克民族主义 - 伊拉克萨德尔派公正党及其运动是一个具有民粹主义和民族主义价值观的什叶派政治运动。尽管萨德尔派民兵得到了伊朗的支持，但该运动追求摆脱任何外国势力的统治的自由。"
  PER.socialism_icon: "£PER_socialism"
  PER.hardline_totalitarian: "£generic_Vilayat_e_Faqih_small 伊朗共和党"
