--- a/Changelog.txt
+++ b/Changelog.txt
@@ -41,6 +41,8 @@ v1.10.0
   - Fixed Black Sea country trade path dead lock error
   - Fixed Canada getting a free bumping to Neo Imperialism
   - Fixed Armenian focus about NATO integration
+  - Fixed PLZ-05 from historical decisions having incorrect modules
+  - Fixed AI designing non-producable PLZ-05
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina
