--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -14,7 +14,7 @@ cub_democratic_union_tt: "Democratic Social-Revolutionary Party will become lead
 cub_christian_union_tt: "Christian Democratic Party of Cuba will become leadership party"
 cub_dem_unite_tt: "All Democratic parties will unite in one coalition"
 CUB_conf_tt: "We will begin the creation of the Antillean Confederation"
-edu_tt: "§RWe won't be able to change our Education spending for a year"
+edu_tt: "§RWe won't be able to change our Education spending for a year§!"
 bureau_tt: "§RWe won't be able to change our Administration spending for a year§!"
 heal_tt: "§RWe won't be able to change our Healthcare spending for a year§!"
 soc_tt: "§RWe won't be able to change our Social spending for a year§!"
