--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+cuba_focus: "Cuban Focus Tree"
 #tooltip
 CUB_parlament_one: "§GThe dismissal of officials and the creation of a new parliament will begin§!"
 CUB_allow_elections_tt: "§GElections will be allowed§!"
@@ -224,14 +225,14 @@ cubaconf.51.a: "Sad"
 cuba.4.t:  "[FROM.GetName] demands our joining the blockade"
 cuba.4.d: "The American ambassador, at the meeting, stated the need to join the anti-Cuban Blockade. Otherwise, sanctions will be imposed on us"
 cuba.4.a: "We Will Join"
-cuba.5: "They agreed"
-cuba.5.t: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"cuba.5.t"
+cuba.5.t: "They agreed"
+cuba.5.d: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"
 cuba.5.a: "Great"
 cuba.6.t: "Cuba proposes lifting the blockade"
 cuba.6.d: "According to the Cuban representative, relations between our peoples and Governments have reached a new level, and the blockade should be lifted"
 cuba.6.a: "Okay"
 cuba.6.b: "No"
-cuba.52: ""
+cuba.52.d: ""
 cuba.52.t: ""
 cuba.52.d: ""
 cuba.52.a: ""
