--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -74,9 +74,9 @@ cuba.17.t: "Cuba is offering us an alliance"
 cuba.17.d: "Cuba is inviting us to join their new alliance"
 cuba.17.a: "Of course we`ll join"
 cuba.17.b: "No"
-cuba.14: "Cuba proposes to solve the Guantamno problem"
-cuba.14.t: "Cuba proposes to solve the Guantamno problem"
-cuba.14.d: "The Cuban delegation, suggests that we settle the Guantamno issue once and for all. We can give them the territory, or we can keep it for ourselves"
+cuba.14: "Cuba proposes to solve the Guantanamo problem"
+cuba.14.t: "Cuba proposes to solve the Guantanamo problem"
+cuba.14.d: "The Cuban delegation, suggests that we settle the Guantanamo issue once and for all. We can give them the territory, or we can keep it for ourselves"
 cuba.14.a: "Why do We need this land?"
 cuba.14.b: "No"
 cuba.25: "Cuba wants our protection"
@@ -96,13 +96,13 @@ cuba_news.29: "Cuban Army training with NATO"
 cuba_news.29.t: "Cuban Army training with NATO"
 cuba_news.29.d: "Today, the exercises between Cuba and NATO countries officially began, the parties agreed to expand military cooperation and strengthen the protection of Cuba's democracy and freedom. Also, a US army base will be established on the territory of Cuba to ensure the security of the island"
 cuba_news.29.a: "Cuba has become pro-Western..."
-cuba_news.30: "Cuba returned Guantamno"
-cuba_news.30.t: "Cuba returned Guantamno"
-cuba_news.30.d: "The American delegation has agreed to bring the port of Guantamno under Cuban control"
+cuba_news.30: "Cuba returned Guantanamo"
+cuba_news.30.t: "Cuba returned Guantanamo"
+cuba_news.30.d: "The American delegation has agreed to bring the port of Guantanamo under Cuban control"
 cuba_news.30.a: "Interesting.."
 cuba.26: "They agreed"
 cuba.26.t: "USA accept our offer!"
-cuba.26.d: "The American delegation has agreed, Guantamno is ours again!"
+cuba.26.d: "The American delegation has agreed, Guantanamo is ours again!"
 cuba.26.a: "Yankee, go home"
 cuba.18: "Venezuela agreed"
 cuba.18.t: "Venezuela has accepted our offer"
@@ -118,7 +118,7 @@ cuba_news.24.d: "The EAEU countries approved the granting of observer status to 
 cuba_news.24.a: "Cuba continues to open up to the world"
 cuba.27: "USA rejected"
 cuba.27.t: "USA rejected our offer"
- cuba.27.d: "Guantamno stays under their control"
+ cuba.27.d: "Guantanamo stays under their control"
 cuba.27.a: "And how to talk with them"
 cuba_news.20: "ALBA being formed"
 cuba_news.20.t: "ALBA being formed"
@@ -655,8 +655,8 @@ CUB_venesuella_brothers: "Our Venezuella Brothers"
 CUB_venesuella_brothers_desc: "Venezuela and Cuba are fraternal peoples that must live in peace and prosperity."
 CUB_venesuella_defence: "Mutual Defense with Venezuela "
 CUB_venesuella_defence_desc: "The Cuban Army and the Venezuelan Army should help each other in the event of a major conflict, the exchange of experience and officers will help our countries repel the attack of a potential enemy."
-CUB_guantamno_question: "Solve the Guantamno Issue"
-CUB_guantamno_question_desc: "Guantamno is our territory that was illegally occupied by the US. We should try to regain it diplomatically."
+CUB_Guantanamo_question: "Solve the Guantanamo Issue"
+CUB_Guantanamo_question_desc: "Guantanamo is our territory that was illegally occupied by the US. We should try to regain it diplomatically."
 CUB_police_exp: "Expand Police Influence"
 CUB_police_exp_desc: "Our country will be safer with police and we can better control all opposition."
 CUB_put_natoinalist_in_jail: "Put Nationalist in Jail"
@@ -681,8 +681,8 @@ CUB_allow_multi_party_system: "Allow Multi Party System"
 CUB_allow_multi_party_system_desc: "What kind of democracy is there without freedom of speech?"
  CUB_the_new_constitution: "The New Democratic Constitution"
  CUB_the_new_constitution_desc: "The new Constitution must protect the rights of citizens and the newly established Cuban democracy."
-CUB_guantamno_que: "End Guantamno Question"
-CUB_guantamno_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk anout Guantamno."
+CUB_Guantanamo_que: "End Guantanamo Question"
+CUB_Guantanamo_que_desc: "We need to end territorial questions between Cuba and USA, we need to talk anout Guantanamo."
 CUB_demilitarize_society: "Demilitarization of Society"
 CUB_demilitarize_society_desc: "Militarism in our country is unfortunately high, we need to demilitarize our society in order to achieve true democracy and freedom."
 CUB_deals_with_rare_communists: "Deal with the Communists"
