--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -182,7 +182,7 @@
  cuba.41.a: "Great!"
  cuba.42: "The U.S. is rejecting our offer"
  cuba.42.t: "The U.S. is rejecting our offer"
- cuba.42.d: "They consider the proposal boorish and will not give independence to the peninsula"
+ cuba.42.d: "They consider the proposal boorish and will not give independence to the Puerto Rico."
  cuba.42.a: "Sad"
  cuba.43: "Cuba is asking us to lift the embargo"
  cuba.43.t: "Cuba is asking us to lift the embargo"
