--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -225,7 +225,7 @@
  cuba.4.d: "The American ambassador, at the meeting, stated the need to join the anti-Cuban Blockade. Otherwise, sanctions will be imposed on us"
  cuba.4.a: "We Will Join"
  cuba.5: "They agreed"
- cuba.5.t: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"cuba.5.t"
+ cuba.5.t: "[FROM.GetName] made a statement and announced his accession to the anti-Cuban blockade"
  cuba.5.a: "Great"
  cuba.6.t: "Cuba proposes lifting the blockade"
  cuba.6.d: "According to the Cuban representative, relations between our peoples and Governments have reached a new level, and the blockade should be lifted"
@@ -252,7 +252,7 @@
  CUB_ter_oboronaup_start: "Deploy unit in Habana"
  CUB_ter_oboronaup: "Deploy unit in Camaguey"
  CUB_alba_category_desc: "\n\n\n\n\n\n£CUB_desctext_alba\n\n\n\n\n\n\n\n\nALBA is an intergovernmental organization based on the idea of political and economic integration of Latin American and Caribbean countries. Cuba is one of the leaders of the alliance, as well as the main initiator of alliance projects. We must launch a number of important projects that will help us and our economy to recover\nWe have completed §G[?CUB.alba_completed]§! §YALBA Projects§!"
- CUB_blockade_fight_category_desc: "\n\n\n\n\n\n£CUB_desctext_blockade\n\n\n\n\n\n\n\n\n[USA.GetFlag]The United States embargo against [CUB.GetFlag]Cuba prohibits [USA.GetFlag]United States businesses, as well as businesses organized under United States §8law or majority§! owned by §5United States citizens,§! from trading with §tCuban interests.§!  It is the longest trade embargo in modern history.\n\n[blockade_USA_loc]\n[blockade_CAN_loc]\n[blockade_DOM_loc]\n[blockade_HAI_loc]\n[blockade_MEX_loc]"
+ CUB_blockade_fight_category_desc: "\n\n\n\n\n\n£CUB_desctext_blockade\n\n\n\n\n\n\n\n\n[USA.GetFlag]The United States embargo against [CUB.GetFlag]Cuba prohibits [USA.GetFlag]United States businesses, as well as businesses organized under §8United States law§! or §5majority owned by United States citizens§! from trading with §tCuban interests.§!  It is the longest trade embargo in modern history.\n\n[blockade_USA_loc]\n[blockade_CAN_loc]\n[blockade_DOM_loc]\n[blockade_HAI_loc]\n[blockade_MEX_loc]"
  CUB.blockade: "§YSupport for the blockade of Cuba§!"
  CUB_buy_healthcare: "Purchase a Shipment of Medicines Through the Black Market"
  CUB_buy_healthcare_desc: "Since we are not allowed to officially purchase medications, we can ask our friends for help"
@@ -472,7 +472,7 @@
  CUB_first_stage_of_federation: "First Stage of the Confederacy"
  CUB_first_stage_of_federation_desc: "It is time for the unification of the Caribbean countries!"
  CUB_solve_problems_with_haiti: "Solve All Problems with Haiti"
- CUB_solve_problems_with_haiti_desc: "Haiti is a potential party to our treaty, but we have many grievances against each other that need to be urgently resolve.d"
+ CUB_solve_problems_with_haiti_desc: "Haiti is a potential party to our treaty, but we have many grievances against each other that need to be urgently resolved."
  CUB_realetions_with_dominicana: "Improve Relations with Dominican Republic"
  CUB_realetions_with_dominicana_desc: "Dominicana is one of the largest countries in the Caribbean and perhaps our confederation, it's time to be friends again."
  CUB_liberate_puerto_rico: "Negotiations on the Fate of Puerto Rico"
