--- a/Changelog.txt
+++ b/Changelog.txt
@@ -45,7 +45,7 @@ v1.10.0
   - Fixed AI designing non-producable PLZ-05
 
  Content:
-  - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina
+  - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
   - NEW REWORKED TREE: Donetsk PR, Transnistria, Lugansk PR, Belarus
   - The Union state of Russia and Belarus gives more national spirits during the annexation
   - Some decisions have been removed from the mechanics of the Russian subjects
