move weapon dump to monthly tick instead of decisions

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@ v1.10.0
 
  AI:
   - Reworked AI stockpile, production, and target templates
+  - Removed AI dump decisions to monthly tick - should increase performance negligably
 
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
