make the EU gui loc into localization files

--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -9,12 +9,18 @@
  form_USoE_tt: "We form the [EUU.GetFlag]United States of Europe."
  requires_usoe_tt: "Requires United States of Europe to have passed the EU Council"
  requires_potef_tt: "Requires President of the Europen Federation to have passed the EU Council"
-
+ EU_trigger_article_50: "Trigger Article 50"
+ EU_adopt_eu_law: "Adopt Eu Law"
  EU_draft_an_eu_budget: "Draft New Budget"
  EU_budget_draft: "You have started making a draft of the EU budget"
+ EU_MFF_draft_tt: "MFF Draft"
  EU_mff_draft: "You have started making a draft of the Multiannual Financial Framework"
  focus_EU_mff_EP_approval: "Draft got the EP approval"
  focus_EU_budget_EP_approval: "Draft got the EP approval"
+ EU_no_urrent_mff_draft: "No Current MFF Draft"
+ EU_no_ongoing_parliament_vote: "No Ongoing Parliament Vote"
+ EU_no_active_budget_draft: "No Active Budget Draft"
+
  # Flags
  EU_potential: "[ROOT.GetNamewithFlag] is a Potential EU Member"
  EU_candidate: "[ROOT.GetNamewithFlag] is an EU Candidate Member"
