--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -54,11 +54,11 @@
  UZB_karapalkstan.4.b: "Back the Uzbeks"
  UZB_karapalkstan.4.c: "Find a solution to please both sides"
  #
- KAZ_high_emigration_5: "High Level of Emigration"
+ KAZ_high_emigration_5: "Huge Level of Emigration"
  KAZ_high_emigration_5_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- KAZ_high_emigration_4: "Substantial Level of Emigration"
+ KAZ_high_emigration_4: "High Level of Emigration"
  KAZ_high_emigration_4_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- KAZ_high_emigration_3: "High Level of Emigration"
+ KAZ_high_emigration_3: "Medium Level of Emigration"
  KAZ_high_emigration_3_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  KAZ_high_emigration_2: "Low Level of Emigration"
  KAZ_high_emigration_2_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
@@ -66,11 +66,11 @@
  KAZ_high_emigration_1_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  KAZ_immigration: "Positive Immigration"
 
- UZB_high_emigration_5: "High Level of Emigration"
+ UZB_high_emigration_5: "Huge Level of Emigration"
  UZB_high_emigration_5_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- UZB_high_emigration_4: "Substantial Level of Emigration"
+ UZB_high_emigration_4: "High Level of Emigration"
  UZB_high_emigration_4_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- UZB_high_emigration_3: "High Level of Emigration"
+ UZB_high_emigration_3: "Medium Level of Emigration"
  UZB_high_emigration_3_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  UZB_high_emigration_2: "Low Level of Emigration"
  UZB_high_emigration_2_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
@@ -78,11 +78,11 @@
  UZB_high_emigration_1_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  UZB_immigration: "Positive Immigration"
 
- KYR_high_emigration_5: "High Level of Emigration"
+ KYR_high_emigration_5: "Huge Level of Emigration"
  KYR_high_emigration_5_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- KYR_high_emigration_4: "Substantial Level of Emigration"
+ KYR_high_emigration_4: "High Level of Emigration"
  KYR_high_emigration_4_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
- KYR_high_emigration_3: "High Level of Emigration"
+ KYR_high_emigration_3: "Medium Level of Emigration"
  KYR_high_emigration_3_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  KYR_high_emigration_2: "Low Level of Emigration"
  KYR_high_emigration_2_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
