--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -1039,10 +1039,10 @@
  CUB_MERCOSUR_desc: "The Southern Common Market, commonly known by Spanish abbreviation Mercosur, and Portuguese Mercosul, is a South American trade bloc established by the Treaty of Asunción in 1991 and Protocol of Ouro Preto in 1994. Its full members are Argentina, Brazil, Paraguay and Uruguay."
  CUB_operation_miracle: "Start Operation Miracle"
  CUB_operation_miracle_desc: "Operation Milagro  is an international medical program funded by Cuba and Venezuela that provides free treatment to poor people in Third World countries for diseases such as cataracts, glaucoma, strabismus, and others."
- CUB_revive_mettalurgy: "Revive Cuban Mettalurgy"
- CUB_revive_mettalurgy_desc: "Mettalurgy is an important sector of our economy. However, our metallurgy is in poor condition, we need to rebuild it."
- CUB_revive_mettalurg: "Upgrade Old Factories"
- CUB_revive_mettalurg_desc: "We have some factories that are in bad shape, we can rebuild them and use the saved funds to build other factories."
+ CUB_revive_metallurgy: "Revive Cuban Metallurgy"
+ CUB_revive_metallurgy_desc: "Metallurgy is an important sector of our economy. However, our metallurgy is in poor condition, we need to rebuild it."
+ CUB_upgrade_old_factories: "Upgrade Old Factories"
+ CUB_upgrade_old_factories_desc: "We have some factories that are in bad shape, we can rebuild them and use the saved funds to build other factories."
  CUB_expand_gold_mining: "Expand Steel Mining"
  CUB_expand_gold_mining_desc: "We need steel, lots of steel."
  CUB_expand_chrome_mining: "Expand Gold Mining"
